# ecommerce-realtime-pipeline

./: README.md  config.yaml  pyproject.toml
consumer/: event_processor.py  kinesis_consumer.py
data/sample_events/: cart_events.jsonl  order_events.jsonl  session_events.jsonl
dbt/: dbt_project.yml
dbt/macros/: safe_cast.sql
dbt/models/bronze/: sources.yml
dbt/models/gold/: gold_abandoned_cart_rate.sql  gold_revenue_daily.sql  gold_top_products.sql  schema.yml
dbt/models/silver/: schema.yml  silver_cart_events.sql  silver_orders.sql  silver_sessions.sql
dbt/seeds/: product_catalog.csv
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2dd5fcfaf24484e6_event_processor_py.html  z_2dd5fcfaf24484e6_kinesis_consumer_py.html  z_78361d3913668f02_redshift_writer_py.html  z_78361d3913668f02_s3_checkpoint_py.html  z_9dd3a33947e496d0_pipeline_health_py.html  z_9e08c620d617d3e3_event_generator_py.html  z_9e08c620d617d3e3_kinesis_producer_py.html  z_9e08c620d617d3e3_schemas_py.html
monitoring/: pipeline_health.py
orchestration/: .env.example  docker-compose.yml
orchestration/dags/: ecommerce_pipeline_dag.py
producer/: event_generator.py  kinesis_producer.py  schemas.py
storage/: redshift_writer.py  s3_checkpoint.py
tests/: test_coverage_boost.py  test_event_generator.py  test_event_processor.py  test_gold_metrics.py  test_kinesis_consumer.py  test_kinesis_producer.py  test_pipeline_health.py  test_redshift_writer.py  test_s3_checkpoint.py
